{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 23,
  "lineage": "a104725a-b8ee-5f24-d26d-f2d414b41a42",
  "resources": [
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04d863c4f0db65cc9",
            "domain": "vpc",
            "id": "eipalloc-04d863c4f0db65cc9",
            "network_border_group": "ap-south-1",
            "public_dns": "ec2-3-109-14-87.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.109.14.87",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "SAP-DEV-MyVpc-ap-south-1a",
              "enviornment": "DEV",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-DEV-MyVpc-ap-south-1a",
              "enviornment": "DEV",
              "owners": "SAP"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:174228772591:internet-gateway/igw-023ee961e4f5047ee",
            "id": "igw-023ee961e4f5047ee",
            "owner_id": "174228772591",
            "tags": {
              "Name": "SAP-DEV-MyVpc",
              "enviornment": "DEV",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-DEV-MyVpc",
              "enviornment": "DEV",
              "owners": "SAP"
            },
            "vpc_id": "vpc-0bd1c50f11674ef30"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-04d863c4f0db65cc9",
            "connectivity_type": "public",
            "id": "nat-0ff943488bdf022de",
            "network_interface_id": "eni-000985b54f6fbc33b",
            "private_ip": "10.230.0.5",
            "public_ip": "3.109.14.87",
            "subnet_id": "subnet-08d9641cfbd828f06",
            "tags": {
              "Name": "SAP-DEV-MyVpc-ap-south-1a",
              "enviornment": "DEV",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-DEV-MyVpc-ap-south-1a",
              "enviornment": "DEV",
              "owners": "SAP"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0492465113229061c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0ff943488bdf022de",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0492465113229061c",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-023ee961e4f5047ee",
            "id": "r-rtb-0c4e37eff12ffdecc1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0c4e37eff12ffdecc",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:174228772591:route-table/rtb-072764e864b802529",
            "id": "rtb-072764e864b802529",
            "owner_id": "174228772591",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "SAP-DEV-MyVpc-db",
              "enviornment": "DEV",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-DEV-MyVpc-db",
              "enviornment": "DEV",
              "owners": "SAP"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd1c50f11674ef30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:174228772591:route-table/rtb-0492465113229061c",
            "id": "rtb-0492465113229061c",
            "owner_id": "174228772591",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "SAP-DEV-MyVpc-private",
              "enviornment": "DEV",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-DEV-MyVpc-private",
              "enviornment": "DEV",
              "owners": "SAP"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd1c50f11674ef30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:174228772591:route-table/rtb-0c4e37eff12ffdecc",
            "id": "rtb-0c4e37eff12ffdecc",
            "owner_id": "174228772591",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "SAP-DEV-MyVpc-public",
              "enviornment": "DEV",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-DEV-MyVpc-public",
              "enviornment": "DEV",
              "owners": "SAP"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bd1c50f11674ef30"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f2d4eec5f601b6e",
            "route_table_id": "rtb-072764e864b802529",
            "subnet_id": "subnet-0a0f4b308c0996cd4"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02bc6e02b208a03b0",
            "route_table_id": "rtb-072764e864b802529",
            "subnet_id": "subnet-0ef318c2525674cd9"
          },
          "dependencies": [
            "module.vpc.aws_route_table.database",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.database",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07f6464167296e3ab",
            "route_table_id": "rtb-0492465113229061c",
            "subnet_id": "subnet-05c3ffbaee81c4905"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07b048a874e00cb15",
            "route_table_id": "rtb-0492465113229061c",
            "subnet_id": "subnet-0d7574dfe5a1d1c40"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ea8fb0ddea676e38",
            "route_table_id": "rtb-0c4e37eff12ffdecc",
            "subnet_id": "subnet-08d9641cfbd828f06"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0db93f4eb1edcf0dd",
            "route_table_id": "rtb-0c4e37eff12ffdecc",
            "subnet_id": "subnet-0c5c5c21e167b2847"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:174228772591:subnet/subnet-0a0f4b308c0996cd4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.230.0.64/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a0f4b308c0996cd4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "174228772591",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SAP-DEV-MyVpc-db-ap-south-1a",
              "Type": "database-subnets",
              "enviornment": "DEV",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-DEV-MyVpc-db-ap-south-1a",
              "Type": "database-subnets",
              "enviornment": "DEV",
              "owners": "SAP"
            },
            "vpc_id": "vpc-0bd1c50f11674ef30"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:174228772591:subnet/subnet-0ef318c2525674cd9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.230.0.80/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ef318c2525674cd9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "174228772591",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SAP-DEV-MyVpc-db-ap-south-1b",
              "Type": "database-subnets",
              "enviornment": "DEV",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-DEV-MyVpc-db-ap-south-1b",
              "Type": "database-subnets",
              "enviornment": "DEV",
              "owners": "SAP"
            },
            "vpc_id": "vpc-0bd1c50f11674ef30"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:174228772591:subnet/subnet-05c3ffbaee81c4905",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.230.0.16/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-05c3ffbaee81c4905",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "174228772591",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SAP-DEV-MyVpc-private-ap-south-1a",
              "Type": "private-subnets",
              "enviornment": "DEV",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-DEV-MyVpc-private-ap-south-1a",
              "Type": "private-subnets",
              "enviornment": "DEV",
              "owners": "SAP"
            },
            "vpc_id": "vpc-0bd1c50f11674ef30"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:174228772591:subnet/subnet-0d7574dfe5a1d1c40",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.230.0.48/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d7574dfe5a1d1c40",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "174228772591",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SAP-DEV-MyVpc-private-ap-south-1b",
              "Type": "private-subnets",
              "enviornment": "DEV",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-DEV-MyVpc-private-ap-south-1b",
              "Type": "private-subnets",
              "enviornment": "DEV",
              "owners": "SAP"
            },
            "vpc_id": "vpc-0bd1c50f11674ef30"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:174228772591:subnet/subnet-08d9641cfbd828f06",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.230.0.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08d9641cfbd828f06",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "174228772591",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SAP-DEV-MyVpc-public-ap-south-1a",
              "Type": "public-subnets",
              "enviornment": "DEV",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-DEV-MyVpc-public-ap-south-1a",
              "Type": "public-subnets",
              "enviornment": "DEV",
              "owners": "SAP"
            },
            "vpc_id": "vpc-0bd1c50f11674ef30"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:174228772591:subnet/subnet-0c5c5c21e167b2847",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.230.0.32/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c5c5c21e167b2847",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "174228772591",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "SAP-DEV-MyVpc-public-ap-south-1b",
              "Type": "public-subnets",
              "enviornment": "DEV",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-DEV-MyVpc-public-ap-south-1b",
              "Type": "public-subnets",
              "enviornment": "DEV",
              "owners": "SAP"
            },
            "vpc_id": "vpc-0bd1c50f11674ef30"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:174228772591:vpc/vpc-0bd1c50f11674ef30",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.230.0.0/25",
            "default_network_acl_id": "acl-0ca56b923987214be",
            "default_route_table_id": "rtb-0e4a3babd2eb8bf6c",
            "default_security_group_id": "sg-0380a73962222e52c",
            "dhcp_options_id": "dopt-00a9eb174d57b8372",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0bd1c50f11674ef30",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e4a3babd2eb8bf6c",
            "owner_id": "174228772591",
            "tags": {
              "Name": "SAP-DEV-MyVpc",
              "enviornment": "DEV",
              "owners": "SAP"
            },
            "tags_all": {
              "Name": "SAP-DEV-MyVpc",
              "enviornment": "DEV",
              "owners": "SAP"
            }
          }
        }
      ]
    }
  ]
}